# rscholar

./: .gitignore  Cargo.toml  README.md  README_zh.md  api_request.py  build.rs  config.example.toml  start.ps1  start.sh
docs/: API.md  API_zh.md  ARCHITECTURE.md
front/: index.html  package-lock.json  package.json  vite.config.js
front/src/: main.js
front/src/api/: client.js
front/src/pages/: api.js  home.js  task.js
front/src/styles/: index.css
front/src/utils/: history.js
scripts/: export_cookies.js  export_cookies.py
src/: error.rs  lib.rs  main.rs  traffic.rs  unified.rs
src/cli/: mod.rs  search.rs  server.rs
src/db/: analytics.rs  api_keys.rs  journal_cache.rs  mod.rs  schema.rs  tasks.rs
src/llm/: README.md  keyword_expansion.rs  keyword_translation.rs  mod.rs  provider_core.rs
src/llm/providers/: aiping.rs  bigmodel.rs  provider_template.rs  siliconflow.rs
src/ranking/: README.md  client.rs  mod.rs  pool.rs  response.rs  service.rs  types.rs
src/server/: admin.rs  config.rs  handlers.rs  middleware.rs  mod.rs  pipeline.rs  recovery.rs  responses.rs  routes.rs  state.rs  task.rs
src/server/pipeline/: analytics.rs  export.rs  fallback.rs  keyword_expansion.rs  keyword_translation.rs  llm_filter.rs  merge.rs  search_stage.rs
src/sources/: arxiv.rs  crossref.rs  mod.rs  openalex.rs  pubmed.rs  rate_limiter.rs  semanticscholar.rs  xrxiv.rs
tests/: db_tests.rs  llm_live_availability.rs  ranking_live_service.rs  ranking_tests.rs  sources_live_fetch.rs  sources_tests.rs
tests/common/: mod.rs
