[package]
name = "Rscholar"
version = "0.1.0"
edition = "2021"
description = "Academic literature pipeline - Rust microservice"
license = "MIT"

[lib]
name = "rscholar"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# HTTP client & server
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "brotli", "deflate", "rustls-tls"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }

# Parsing
scraper = "0.22"
regex = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.3"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging & Metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
chrono = "0.4"
dirs = "6"
rand = "0.8"
url = "2"
urlencoding = "2.1.3"
rig-core = "0.27.0"
once_cell = "1"
async-channel = "2"

# API Server
dotenvy = "0.15"                                 # Environment config
dashmap = "6.1"                                  # Concurrent HashMap for task store
uuid = { version = "1", features = ["v4"] }      # Task IDs

# Database (async-safe with proper timeouts)
rusqlite = { version = "0.37", features = ["bundled"] }  # Embedded SQLite
deadpool-sqlite = "0.12"                         # Async connection pool

# Security (API Key handling)
sha2 = "0.10"                                    # Hashing
hmac = "0.12"                                    # HMAC for key derivation
subtle = "2.5"                                   # Constant-time comparison
secrecy = "0.10"                                 # Prevent key leakage in logs
hex = "0.4"                                      # Hex encoding
async-trait = "0.1.89"
toml = "0.9.10"

[lints.clippy]
unwrap_used = "deny"
expect_used = "warn"                             # Warn on expect in non-test code

[dev-dependencies]
tempfile = "3.23.0"
